# authentication-server-rust

./: Cargo.toml
src/: auth.rs  error.rs  main.rs
