[package]
name = "authentication-server-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
serde = {version = "1.0.203", features = ["derive"]}
tokio = {version = "1.38.0"}
warp = "0.3.7"
