[package]
name = "authentication-server-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0.61"
tokio = {version = "1.38.0", features = ["full"]}
warp = "0.3.7"
